--- a/public/index.less
+++ b/public/index.less
@@ -28,17 +28,6 @@ input {
 	position: relative;
 }
 
-.signIn-button {
-	cursor: pointer;
-	display: inline-block;
-}
-
-.about {
-	cursor: pointer;
-	display: inline-block;
-	padding-right: 30px;
-}
-
 .landing-message {
 	width: 100%;
 	height: 100vh;
@@ -83,7 +72,7 @@ input {
 	border: solid 1px rgb(250, 250, 250);
 	border-radius: 5px;
 	display: inline-block;
-}s
+}
 
 .signUp-window, {
 	position: absolute;
@@ -98,23 +87,17 @@ input {
 	text-align: center;
 }
 
-.login-window {
-	position: absolute;
-	background: rgba(23, 23, 22, .9);
-	width: 50%;
-	height: 20vh;
-	top: 50%;
-	transform: translateY(-50%);
-	left: 25%;
-	border-radius: 10px;
-	padding: 2%;
-	padding-top: 1%;
-	text-align: center;
+.login-link {
+	color: rgb(250, 250, 250);
+	text-decoration: none;
+	font-size: 16px;
+	padding: 20px;
 }
 
 .first-login-message {
-	color: rgb(250, 250, 250);
+	color: rgb(101, 236, 252);
 	width: 100%;
+	font-weight: 200;
 	text-align: center;
 	position: absolute;
 	top: 10px;
@@ -149,6 +132,8 @@ input {
 	color: rgb(250, 250, 250);
 	text-align: right;
 	cursor: pointer;
+	margin-left: 350px;
+
 }
 
 .projects-container {
@@ -198,43 +183,39 @@ input {
 	border-radius: 5px;
 	position: relative;
 	overflow-x: auto;
-}
 
-.projectName {
-	font-size: 20px;
-	margin-bottom: 5px;
-	color: rgb(25, 181, 188);
-	font-weight: bold;
-}
+	.projectName {
+		font-size: 20px;
+		margin-bottom: 5px;
+		color: rgb(25, 181, 188);
+		font-weight: bold;
+	}
 
-.projectName:hover {
-	color: RGB(199, 223, 230);
-}
+	.projectName:hover {
+		color: RGB(199, 223, 230);
+	}
 
-.projectDescription {
-	margin-bottom: 10px;
-	height: 155px;
-	color: rgb(150, 150, 150);
-	overflow: scroll;
+	.projectDescription {
+		margin-bottom: 10px;
+		height: 155px;
+		color: rgb(150, 150, 150);
+		overflow: scroll;
 
-}
+	}
 
-.projectCreator {
-	margin-bottom: 10px;
-}
+	.projectCreator {
+		margin-bottom: 10px;
+	}
 
-.email{
-	height: 45px;
-	width: 45%;
-}
 
-.languages {
-	margin-bottom: 10px;
-	font-weight: 200;
-}
+	.languages {
+		margin-bottom: 10px;
+		font-weight: 200;
+	}
 
-.deadline {
-	font-weight: 200;
+	.deadline {
+		font-weight: 200;
+	}
 }
 
 .header {
@@ -337,6 +318,10 @@ input {
 	cursor: pointer;
 }
 
+.projectView .slack-button, .slack-container, .projectView .pair-button {
+	display: none;
+}
+
 .dashboard-button {
 	display: inline-block;
 	padding-right: 10px;
@@ -344,37 +329,44 @@ input {
 /* Profile View */
 .profile-container {
 	text-align: center;
-	background: rgb(120, 120, 120);
-}
+	background: rgb(18, 23, 49);
+	color: rgb(250, 250, 250);
 
-.myInfo {
-	width: 500px;
-	display: inline-block;
-	text-align: center;
-	padding: 10px;
-}
+	.aboutMe {
+		font-weight: 200
+	}
 
-.avatar {
-	width: 300px;
-	height: 300px;
-	background: url("images/ghaea.jpeg");
-	background-size: cover;
-	border-radius: 300px;
-	display: inline-block;
-}
+	.edit-info {
+		display: inline-block;
+		padding: 5px 10px;
+		border-radius: 5px;
+		color: rgb(150, 150, 150);
+		border: solid 1px rgb(150, 150, 150);
+	}
 
-.myName {
-	font-size: 20px;
-}
+	.myInfo {
+		width: 500px;
+		display: inline-block;
+		text-align: center;
+		padding: 10px;
+	}
 
-.info {
-	margin-bottom: 15px;
-}
+	.avatar {
+		width: 300px;
+		height: 300px;
+		background: url("images/ghaea.jpeg");
+		background-size: cover;
+		border-radius: 300px;
+		display: inline-block;
+	}
 
-.edit-info {
-	color: rgb(200, 200, 200);
-	padding: 5px;
-	border: solid 1px rgb(200, 200, 200);
+	.myName {
+		font-size: 20px;
+	}
+
+	.info {
+		margin-bottom: 15px;
+	}
 }
 
 /* Single Project View */
@@ -385,26 +377,81 @@ input {
 
 #detailed-info {
 	padding: 0 50px;
-}
-#detailed-info .projectView {
-	width: 100%;
+
+	.projectView {
+		width: 100%;
+	}
+
+	.singleProject {
+		background: none;
+		border-radius: 0;
+		height: 450px;
+
+		.projectName:hover {
+			color: rgb(25, 181, 188);
+		};
+	}
+
+	.delete {
+		display: none;
+	}
+
+	.slack-button, .pair-button {
+		color: rgb(250, 250, 250);
+		border: solid 1px rgb(250, 250, 250);
+		display: inline-block;
+		font-size: 20px;
+		padding: 10px;
+		border-radius: 5px;
+		margin-left: 60px;
+		margin-top: 20px;
+	}
+
+	.slack-button:hover {
+		color: RGB(117, 241, 92);
+		border: solid 1px RGB(117, 241, 92);
+	}
+
+	.pair-button:hover {
+		color: RGB(101, 236, 252);
+		border: solid 1px RGB(101, 236, 252);
+	}
+
 }
 
-#detailed-info .singleProject {
-	background: none;
-	border-radius: 0;
+/* Slack Message Window */
+.slack-container {
+	margin-top: 20px;
+	width: 300px;
+	text-align: right;
 }
 
-#detailed-info .delete {
-	display: none;
+.slack-message {
+	width: 300px;
+	height: 100px;
+	font-size: 16px;
+	padding: 5px;
+	border-radius: 5px;
 }
 
-.slack-button {
+.text {
+	display: inline-block;
+	padding: 5px;
+	border-radius: 5px;
+	vertical-align: bottom;
+	color: rgb(100, 100, 100);
+}
+
+.send-button {
 	color: rgb(250, 250, 250);
 	border: solid 1px rgb(250, 250, 250);
 	display: inline-block;
-	font-size: 20px;
-	padding: 10px;
+	padding: 5px;
 	border-radius: 5px;
-	margin-left: 60px;
+	vertical-align: bottom;
+}
+
+.cancel-button {
+	position: relative;
+	right: 195px;
 }
