--- a/public/index.less
+++ b/public/index.less
@@ -224,6 +224,31 @@ input {
 	background: rgba(102, 15, 108, .7);
 	width: 100%;
 	padding: 10px;
+	position: relative;
+
+	.newProjects {
+		display: inline-block;
+	}
+
+	.sortBy-Buttons {
+		display: inline-block;
+		font-size: 16px;
+		line-height: 20px;
+		position: absolute;
+		right: 20px;
+
+		.sort {
+			display: inline-block;
+			margin-left: 5px;
+			font-weight: 200
+		}
+
+		.by:hover {
+			color: RGB(101, 236, 252);
+			cursor: pointer;
+		}
+
+	}
 }
 
 #myProject-list, #newProject-list {
