updating heroku for updated backbone routes

--- a/public/index.less
+++ b/public/index.less
@@ -343,7 +343,7 @@ input {
 	cursor: pointer;
 }
 
-.projectView .slack-button, .slack-container, .projectView .pair-button {
+.projectView .slack-button, .projectView .pair-button {
 	display: none;
 }
 
