added view and route for messages

--- a/public/index.less
+++ b/public/index.less
@@ -318,7 +318,7 @@ input {
 	cursor: pointer;
 }
 
-.projectView .slack-button, .slack-container, .projectView .pair-button {
+.projectView .pair-button {
 	display: none;
 }
 
@@ -426,6 +426,10 @@ input {
 	text-align: right;
 }
 
+.input-message {
+	display: inline-block;
+}
+
 .slack-message {
 	width: 300px;
 	height: 100px;
@@ -454,4 +458,14 @@ input {
 .cancel-button {
 	position: relative;
 	right: 195px;
+}
+
+.show-message {
+	background: rgb(50, 50, 50);
+	border-radius: 5px;
+	display: inline-block;
+	width: 300px;
+	height: 600px;
+	overflow: scroll;
+
 }
