trying to fix show/hide for message

--- a/public/index.less
+++ b/public/index.less
@@ -318,7 +318,11 @@ input {
 	cursor: pointer;
 }
 
-.projectView .pair-button {
+.projectView .pair-button{
+	display: none;
+}
+
+.slack-container {
 	display: none;
 }
 
