--- a/public/index.less
+++ b/public/index.less
@@ -422,13 +422,14 @@ input {
 /* Slack Message Window */
 .slack-container {
 	display: none;
+	margin-top: 20px;
 }
 
 .input-message {
-	display: inline-block;
-	margin-top: 20px;
+	display: inline-block;	
 	width: 300px;
 	text-align: right;
+	vertical-align: top;
 }
 
 .slack-message {
@@ -465,8 +466,9 @@ input {
 	background: rgb(50, 50, 50);
 	border-radius: 5px;
 	display: inline-block;
-	width: 300px;
-	height: 600px;
+	margin-left: 20px;
+	width: 400px;
+	height: 300px;
 	overflow: scroll;
 
 }
