updated html/css to test message router

--- a/public/index.less
+++ b/public/index.less
@@ -464,6 +464,7 @@ input {
 
 .show-message {
 	background: rgb(50, 50, 50);
+	color: rgb(250, 250, 250);
 	border-radius: 5px;
 	display: inline-block;
 	margin-left: 20px;
