--- a/public/index.less
+++ b/public/index.less
@@ -155,12 +155,8 @@ input {
 	left: 10px;
 }
 
-.newProject-container {
+.newProject-container, .myProject-container {
 	height: 500px;
-	overflow-x: auto;
-}
-
-.myProject-container {
 	overflow-x: auto;
 }
 
