html/css update

--- a/public/index.less
+++ b/public/index.less
@@ -466,8 +466,14 @@ input {
 	width: 400px;
 	height: 300px;
 	overflow: scroll;
+	padding: 10px;
+	font-weight: 200;
 }
 
 .user, .user-message {
 	display: inline-block;
+}
+
+.hero {
+	color: RGB(199, 223, 230)
 }
