--- a/public/index.less
+++ b/public/index.less
@@ -155,7 +155,7 @@ input {
 	left: 10px;
 }
 
-.newProject-container, #myProject-list {
+.newProject-container, .myProject-container {
 	height: 500px;
 	overflow-x: auto;
 }
