--- a/public/index.less
+++ b/public/index.less
@@ -140,6 +140,10 @@ input {
 	background-image: url("images/ocean.jpeg");
 	background-size: cover;
 	color: rgb(250, 250, 250);
+
+	.slack-button, .pair-button {
+		display: none;
+	}
 }
 
 
