trying to hide buttons

--- a/public/index.less
+++ b/public/index.less
@@ -141,7 +141,8 @@ input {
 	background-size: cover;
 	color: rgb(250, 250, 250);
 
-	.slack-button, .pair-button {
+	.singleProject {
+		.slack-button, .pair-button {
 		display: none;
 	}
 }
