--- a/public/index.less
+++ b/public/index.less
@@ -471,13 +471,17 @@ input {
 	overflow: scroll;
 	padding: 10px;
 	font-weight: 200;
+
+	.user, .user-message {
+		display: inline-block;
+	}
+
+	.hero {
+		color: RGB(199, 223, 230);
+	}
+
+	.single-message {
+		margin-top: 5px;
+	}
 }
 
-.user, .user-message {
-	display: inline-block;
-}
-
-.hero {
-	color: RGB(199, 223, 230);
-	position: fixed;
-}
