--- a/public/index.less
+++ b/public/index.less
@@ -480,8 +480,8 @@ input {
 		color: RGB(199, 223, 230);
 	}
 
-	.single-message {
-		padding: 5px 0;
+	.message-recieved {
+		margin-top: 5px;
 	}
 }
 
