--- a/public/index.less
+++ b/public/index.less
@@ -378,41 +378,42 @@ input {
 
 	.projectView {
 		width: 100%;
-	}
+	
 
-	.singleProject {
-		background: none;
-		border-radius: 0;
-		height: 450px;
+		.singleProject {
+			background: none;
+			border-radius: 0;
+			height: 450px;
 
-		.projectName:hover {
-			color: rgb(25, 181, 188);
-		};
-	}
+			.projectName:hover {
+				color: rgb(25, 181, 188);
+			};
+		}
 
-	.delete {
-		display: none;
-	}
+		.delete {
+			display: none;
+		}
 
-	.slack-button, .pair-button {
-		color: rgb(250, 250, 250);
-		border: solid 1px rgb(250, 250, 250);
-		display: inline-block;
-		font-size: 20px;
-		padding: 10px;
-		border-radius: 5px;
-		margin-left: 60px;
-		margin-top: 20px;
-	}
+		.slack-button, .pair-button {
+			color: rgb(250, 250, 250);
+			border: solid 1px rgb(250, 250, 250);
+			display: inline-block;
+			font-size: 20px;
+			padding: 10px;
+			border-radius: 5px;
+			margin-left: 60px;
+			margin-top: 20px;
+		}
 
-	.slack-button:hover {
-		color: RGB(117, 241, 92);
-		border: solid 1px RGB(117, 241, 92);
-	}
+		.slack-button:hover {
+			color: RGB(117, 241, 92);
+			border: solid 1px RGB(117, 241, 92);
+		}
 
-	.pair-button:hover {
-		color: RGB(101, 236, 252);
-		border: solid 1px RGB(101, 236, 252);
+		.pair-button:hover {
+			color: RGB(101, 236, 252);
+			border: solid 1px RGB(101, 236, 252);
+		}
 	}
 
 }
@@ -466,11 +467,14 @@ input {
 	border-radius: 5px;
 	display: inline-block;
 	margin-left: 20px;
-	width: 400px;
-	height: 300px;
+	width: 50%;
+	height: 90%;
 	overflow: scroll;
 	padding: 10px;
 	font-weight: 200;
+	position: absolute;
+	top: 15px;
+	right: 0;
 
 	.user, .user-message {
 		display: inline-block;
