--- a/public/index.less
+++ b/public/index.less
@@ -383,11 +383,15 @@ input {
 		.singleProject {
 			background: none;
 			border-radius: 0;
-			height: 450px;
+			height: 90%;
 
 			.projectName:hover {
 				color: rgb(25, 181, 188);
 			};
+
+			.project-info {
+				width: 50%;
+			}
 		}
 
 		.delete {
