--- a/public/index.less
+++ b/public/index.less
@@ -392,7 +392,7 @@ input {
 			};
 
 			.project-info {
-				width: 50%;
+				width: 48%;
 				display: inline-block;
 			}
 
@@ -407,14 +407,14 @@ input {
 
 				.input-message {
 					display: inline-block;	
-					width: 300px;
+					width: 100%;
 					text-align: right;
 					vertical-align: top;
 				}
 
 				.slack-message {
-					width: 300px;
-					height: 100px;
+					width: 100%;
+					height: 80%;
 					font-size: 16px;
 					padding: 5px;
 					border-radius: 5px;
