--- a/public/index.less
+++ b/public/index.less
@@ -397,19 +397,18 @@ input {
 			}
 
 			.slack-container {
-				display: none;
-				margin-top: 20px;
 				display: inline-block;
 				width: 50%;
+				vertical-align: top;
 
 				/* Slack Message Window */
 
 
 				.input-message {
-					display: inline-block;	
 					width: 100%;
 					text-align: right;
 					vertical-align: top;
+					position: relative;
 				}
 
 				.slack-message {
@@ -418,6 +417,7 @@ input {
 					font-size: 16px;
 					padding: 5px;
 					border-radius: 5px;
+					vertical-align: top;
 				}
 
 				.text {
@@ -438,18 +438,16 @@ input {
 				}
 
 				.cancel-button {
-					position: relative;
-					right: 195px;
+					position: absolute;
+					left: 0px;
 				}
 
 				.show-message {
 					background: rgb(50, 50, 50);
 					color: rgb(250, 250, 250);
 					border-radius: 5px;
-					display: inline-block;
-					margin-left: 20px;
-					width: 50%;
-					height: 90%;
+					width: 100%;
+					height: 400px;
 					overflow: scroll;
 					padding: 10px;
 					font-weight: 200;
