/hero position fixed

--- a/public/index.less
+++ b/public/index.less
@@ -462,6 +462,12 @@ input {
 
 					.hero {
 						color: RGB(199, 223, 230);
+						background: rgb(50, 50, 50);
+						position: fixed;
+					}
+
+					.single-message {
+						margin-top: 40px
 					}
 				}
 
