update color on dashboard

--- a/public/index.less
+++ b/public/index.less
@@ -137,8 +137,7 @@ input {
 }
 
 .projects-container {
-	background-image: url("images/ocean.jpeg");
-	background-size: cover;
+	background: rgb(250, 250, 250),
 	color: rgb(250, 250, 250);
 }
 
@@ -170,12 +169,13 @@ input {
 }
 
 .singleProject {
-	background: rgba(50, 50, 50, .95);
-	color: rgb(250, 250, 250);
+	background: rgb(250, 250, 250);
+	color: rgb(50, 50, 50);
 	padding: 10px;
 	width: 100%;
 	height: 300px;
 	display: inline-block;
+	border: solid 1px rgb(50, 50, 50);
 	border-radius: 5px;
 	position: relative;
 
@@ -467,7 +467,8 @@ input {
 					}
 
 					.single-message {
-						margin-top: 40px
+						margin-top: 40px;
+
 					}
 				}
 
