--- a/public/index.less
+++ b/public/index.less
@@ -137,7 +137,7 @@ input {
 }
 
 .projects-container {
-	background: rgb(250, 250, 250),
+	background: rgb(250, 250, 250);
 	color: rgb(250, 250, 250);
 }
 
