--- a/public/index.less
+++ b/public/index.less
@@ -137,7 +137,7 @@ input {
 }
 
 .projects-container {
-	background: rgb(250, 250, 250);
+	background: rgb(230, 230, 230);
 	color: rgb(250, 250, 250);
 }
 
@@ -175,7 +175,7 @@ input {
 	width: 100%;
 	height: 300px;
 	display: inline-block;
-	border: solid 1px rgb(50, 50, 50);
+	border: solid 1px rgb(256, 256, 256);
 	border-radius: 5px;
 	position: relative;
 
@@ -219,9 +219,9 @@ input {
 .header {
 	font-size: 20px;
 	margin-bottom: 10px;
-	background: rgba(102, 15, 108, .7);
 	width: 100%;
 	padding: 10px;
+	color: rgb(20, 20, 90);
 }
 
 #myProject-list, #newProject-list {
@@ -230,8 +230,8 @@ input {
 /* Create a New Project*/
 
 .createProject-container {
-	background: rgb(20, 20, 50);
 	height: 100vh;
+	background: rgb(230, 230, 230);
 	color: rgb(250, 250, 250);
 }
 
@@ -327,7 +327,7 @@ input {
 /* Profile View */
 .profile-container {
 	text-align: center;
-	background: rgb(18, 23, 49);
+	background: rgb(230, 230, 230);
 	color: rgb(250, 250, 250);
 
 	.aboutMe {
@@ -369,7 +369,8 @@ input {
 
 /* Single Project View */
 .project-container {
-	background: rgb(18, 23, 49);
+	background: rgb(230, 230, 230);
+	color: rgb(250, 250, 250);
 	height: 100vh;
 }
 
