--- a/public/index.less
+++ b/public/index.less
@@ -382,11 +382,11 @@ input {
 		width: 100%;
 		height: 100%;
 	
-
 		.singleProject {
 			background: none;
 			border-radius: 0;
 			height: 100%;
+			border: none;
 
 			.projectName:hover {
 				color: rgb(25, 181, 188);
