--- a/public/index.less
+++ b/public/index.less
@@ -418,6 +418,7 @@ input {
 					font-size: 16px;
 					padding: 5px;
 					border-radius: 5px;
+					border: none;
 					vertical-align: top;
 				}
 
@@ -426,12 +427,12 @@ input {
 					padding: 5px;
 					border-radius: 5px;
 					vertical-align: bottom;
-					color: rgb(100, 100, 100);
+					color: rgb(150, 150, 150);
 				}
 
 				.send-button {
-					color: rgb(250, 250, 250);
-					border: solid 1px rgb(250, 250, 250);
+					color: rgb(50, 50, 50);
+					border: solid 1px rgb(50, 50, 50);
 					display: inline-block;
 					padding: 5px;
 					border-radius: 5px;
@@ -485,13 +486,12 @@ input {
 		}
 
 		.slack-button, .pair-button {
-			color: rgb(250, 250, 250);
-			border: solid 1px rgb(250, 250, 250);
+			color: rgb(50, 50, 50);
+			border: solid 1px rgb(50, 50, 50);
 			display: inline-block;
 			font-size: 20px;
 			padding: 10px;
 			border-radius: 5px;
-			margin-left: 60px;
 			margin-top: 20px;
 		}
 
