--- a/public/index.less
+++ b/public/index.less
@@ -193,9 +193,12 @@ input {
 		}
 
 		.projectDescription {
-			margin-bottom: 10px;
+			margin: 10px 0;
 			height: 155px;
 			color: rgb(150, 150, 150);
+			border-top: solid 1px;
+			border-bottom: solid 1px;
+			padding: 5px 0;
 			overflow: scroll;
 
 		}
