--- a/public/index.less
+++ b/public/index.less
@@ -390,6 +390,7 @@ input {
 			border-radius: 0;
 			height: 100%;
 			border: none;
+			text-align: center;
 
 			.projectName:hover {
 				color: rgb(25, 181, 188);
@@ -423,6 +424,7 @@ input {
 					border-radius: 5px;
 					border: none;
 					vertical-align: top;
+					text-align: left;
 				}
 
 				.text {
@@ -459,6 +461,7 @@ input {
 
 					.user {
 						font-weight: bold;
+						color: RGB(101, 236, 252);
 					}
 
 					.user, .user-message {
@@ -479,6 +482,7 @@ input {
 				.message-received {
 					margin: 7px 0;
 					font-size: 14px;
+					padding: 5px;
 				}
 			}
 		}
