update buttons to have pointers

--- a/public/index.less
+++ b/public/index.less
@@ -120,7 +120,8 @@ input {
 	color: rgb(250, 250, 250);
 	border: solid 1px rgb(250, 250, 250);
 	border-radius: 5px;
-	margin-top: 20px
+	margin-top: 20px;
+	cursor: pointer;
 }
 
 .login-button {
@@ -145,6 +146,7 @@ input {
 .profile-button, .signOut-button {
 	display: inline-block;
 	padding-right: 10px;
+	cursor: pointer;
 }
 
 .project-button {
@@ -152,6 +154,7 @@ input {
 	display: inline-block;
 	position: absolute;
 	left: 10px;
+	cursor: pointer;
 }
 
 .newProject-container, .myProject-container {
@@ -297,6 +300,7 @@ input {
 	color: rgb(250, 250, 250);
 	border: solid 1px rgb(250, 250, 250);
 	border-radius: 5px;
+	cursor: pointer;
 }
 
 .saveProject-button:hover {
@@ -326,6 +330,7 @@ input {
 .dashboard-button {
 	display: inline-block;
 	padding-right: 10px;
+	cursor: pointer;
 }
 /* Profile View */
 .profile-container {
@@ -441,6 +446,7 @@ input {
 					padding: 5px;
 					border-radius: 5px;
 					vertical-align: bottom;
+					cursor: pointer;
 				}
 
 				.cancel-button {
@@ -457,6 +463,7 @@ input {
 					padding: 10px;
 					font-weight: 200;
 					overflow: scroll;
+					cursor: pointer;
 
 					.user {
 						color: RGB(101, 236, 252);
@@ -498,6 +505,7 @@ input {
 			padding: 10px;
 			border-radius: 5px;
 			margin-top: 20px;
+			cursor: pointer;
 		}
 
 		.slack-button:hover {
