--- a/public/index.less
+++ b/public/index.less
@@ -260,6 +260,7 @@ input {
 	height: 300px;
 	font-size: 16px;
 	padding: 5px;
+	border: none;
 	border-radius: 5px;
 }
 
@@ -298,7 +299,7 @@ input {
 	padding: 10px;
 	background: none;
 	color: rgb(50, 50, 50);
-	border: solid 1px rgb(250, 250, 250);
+	border: solid 1px rgb(50, 50, 50);
 	border-radius: 5px;
 	cursor: pointer;
 }
