added overflow to single project

--- a/public/index.less
+++ b/public/index.less
@@ -181,6 +181,7 @@ input {
 	border: solid 1px rgb(256, 256, 256);
 	border-radius: 5px;
 	position: relative;
+	overflow: scroll;
 
 	.project-info{
 
